test_files/syntax_errors/illegal_type_declaration.java
public class Factorial{
    public static void main(String[] a){
    }
}

class Element {
    public boolean Init(){
        int int = v_Age ;
        return true;
    }

}
